// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passwordEntry component matches the snapshot when keyboard is drawn 1`] = `
<Container
  style={
    Object {
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#a4a4a3",
          "fontSize": 14,
        }
      }
    />
    <CenteredText
      msg="Please use at least 8 characters, no spaces, at least one uppercase letter and one number."
      style={
        Object {
          "color": "#633c38",
          "fontSize": 12,
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Insert password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Confirm password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "red",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={Object {}}
      testID={null}
      text="Continue"
      upperCase={true}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when no input is present 1`] = `
<Container
  style={
    Object {
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title="Please enter a secure password"
    />
    <CenteredText
      msg="The password is used to encrypt and protect your data"
      style={
        Object {
          "color": "#a4a4a3",
          "fontSize": 14,
        }
      }
    />
    <CenteredText
      msg="Please use at least 8 characters, no spaces, at least one uppercase letter and one number."
      style={
        Object {
          "color": "#633c38",
          "fontSize": 12,
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Insert password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Confirm password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "red",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={Object {}}
      testID={null}
      text="Continue"
      upperCase={true}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are not valid 1`] = `
<Container
  style={
    Object {
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#a4a4a3",
          "fontSize": 14,
        }
      }
    />
    <CenteredText
      msg="Please use at least 8 characters, no spaces, at least one uppercase letter and one number."
      style={
        Object {
          "color": "#633c38",
          "fontSize": 12,
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Insert password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Confirm password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg="At least one uppercase letter needed"
      style={
        Object {
          "color": "red",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={Object {}}
      testID={null}
      text="Continue"
      upperCase={true}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are valid 1`] = `
<Container
  style={
    Object {
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#a4a4a3",
          "fontSize": 14,
        }
      }
    />
    <CenteredText
      msg="Please use at least 8 characters, no spaces, at least one uppercase letter and one number."
      style={
        Object {
          "color": "#633c38",
          "fontSize": 12,
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Insert password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Confirm password"
      secureTextEntry={true}
      style={
        Object {
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "red",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={false}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={true}
    />
  </Block>
</Container>
`;
